# gdynia-thermal-map-audit

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml  logging.yaml
data/demo/: README.md  demo_annotations.csv  demo_districts.geojson  demo_fetch_log.csv  demo_layer_catalog.csv  demo_source_inventory.csv
docs/: article_outline.md  data_sources.md  indicator_dictionary.md  limitations.md  manual_annotation.md  methodology.md  phase2_outlook.md  reproducibility.md
notebooks/: 01_frontend_audit.ipynb  02_network_probe.ipynb  03_layer_inventory.ipynb  04_spatial_units.ipynb  05_indicator_exploration.ipynb  06_manual_annotation_demo.ipynb  07_article_tables_figures.ipynb
src/gdynia_thermal_audit/: __init__.py  cli.py  constants.py  logging_utils.py  settings.py
src/gdynia_thermal_audit/annotation/: __init__.py  merge.py  sampling.py  templates.py  validate.py
src/gdynia_thermal_audit/downloader/: __init__.py  checksums.py  fetch.py  metadata.py  rate_limit.py
src/gdynia_thermal_audit/frontend_audit/: __init__.py  asset_catalog.py  html_audit.py  js_inventory.py  viewer_snapshot.py
src/gdynia_thermal_audit/geodata/: __init__.py  crs.py  joins.py  raster_utils.py  reprojection.py  vector_utils.py  zonal_stats.py
src/gdynia_thermal_audit/indicators/: __init__.py  annotation_indicators.py  priority_index.py  raster_indicators.py  spatial_metrics.py  vector_indicators.py
src/gdynia_thermal_audit/network_probe/: __init__.py  capabilities.py  endpoint_probe.py  headers.py  service_discovery.py
src/gdynia_thermal_audit/parser/: __init__.py  js_config_parser.py  layer_catalog_builder.py  map_params.py  url_extractor.py
src/gdynia_thermal_audit/reporting/: __init__.py  export_article_tables.py  figures.py  mermaid_flowchart.py  summary_tables.py
src/gdynia_thermal_audit/schemas/: __init__.py  annotation_records.py  building_level_metrics.py  fetch_log.py  layer_catalog.py  pipeline_run_log.py  raster_inventory.py  source_inventory.py  spatial_unit_metrics.py  vector_inventory.py
src/gdynia_thermal_audit/spatial_units/: __init__.py  districts.py  grid.py  neighborhoods.py
src/gdynia_thermal_audit/utils/: hashing.py  io.py  text.py  time.py
tests/: test_grid_generation.py  test_js_config_parser.py  test_raster_utils.py  test_schema_validation.py  test_spatial_join.py  test_url_extractor.py
