[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdynia-thermal-audit"
version = "0.1.0"
description = "Academic geospatial audit of the Gdynia public thermal-loss map platform (termalne.obliview.com)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }
authors = [
    { name = "Gdynia Thermal Audit Research Team" },
]
keywords = ["geospatial", "thermal", "urban", "remote-sensing", "gdynia", "poland"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "typer>=0.12",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "requests>=2.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "owslib>=0.29",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "mercantile>=1.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "types-beautifulsoup4>=4.12",
    "ipykernel>=6.29",
    "notebook>=7.1",
]

[project.scripts]
gta = "gdynia_thermal_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gdynia_thermal_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (partial)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "ANN201",  # public function return type (too noisy at early stage)
    "ANN001",  # function arg type (too noisy at early stage)
    "ANN401",  # Any in annotations — used legitimately for HTTP session/response types
    "E501",    # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "N"]
"notebooks/*" = ["ANN", "E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["notebooks/", "data/", "outputs/"]
